<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/diamond"
    android:orientation="vertical"
    tools:context="com.example.oluoma.diamondproject.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/camera_alt_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="30dp"
            android:text="@string/country"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="100dp"
            android:text="@string/sign"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="25dp"
                android:src="@drawable/add_circle_black_24dp" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/reg"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginLeft="90dp"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:src="@drawable/_lock_black_24dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/forgot"
                android:textSize="16dp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/email_black_24dp" />

            <TextView
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/notify"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_marginLeft="0dp"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginLeft="40dp"
                android:src="@drawable/ic_phone_android_black_24dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/device"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/local_phone_black_24dp"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/contact"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginLeft="40dp"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginLeft="40dp"
                android:src="@drawable/help_outline_black_24dp"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/fa"
                android:textSize="25dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
